site/docs/3.3.4/api/python/_sources/reference/pyspark.sql/api/pyspark.sql.DataFrame.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

.. Workaround to avoid documenting __init__.

pyspark.sql.DataFrame
=====================

.. currentmodule:: pyspark.sql

.. autoclass:: DataFrame

   


   .. rubric:: Methods

   .. autosummary::
      
      ~DataFrame.agg
      ~DataFrame.alias
      ~DataFrame.approxQuantile
      ~DataFrame.cache
      ~DataFrame.checkpoint
      ~DataFrame.coalesce
      ~DataFrame.colRegex
      ~DataFrame.collect
      ~DataFrame.corr
      ~DataFrame.count
      ~DataFrame.cov
      ~DataFrame.createGlobalTempView
      ~DataFrame.createOrReplaceGlobalTempView
      ~DataFrame.createOrReplaceTempView
      ~DataFrame.createTempView
      ~DataFrame.crossJoin
      ~DataFrame.crosstab
      ~DataFrame.cube
      ~DataFrame.describe
      ~DataFrame.distinct
      ~DataFrame.drop
      ~DataFrame.dropDuplicates
      ~DataFrame.drop_duplicates
      ~DataFrame.dropna
      ~DataFrame.exceptAll
      ~DataFrame.explain
      ~DataFrame.fillna
      ~DataFrame.filter
      ~DataFrame.first
      ~DataFrame.foreach
      ~DataFrame.foreachPartition
      ~DataFrame.freqItems
      ~DataFrame.groupBy
      ~DataFrame.groupby
      ~DataFrame.head
      ~DataFrame.hint
      ~DataFrame.inputFiles
      ~DataFrame.intersect
      ~DataFrame.intersectAll
      ~DataFrame.isEmpty
      ~DataFrame.isLocal
      ~DataFrame.join
      ~DataFrame.limit
      ~DataFrame.localCheckpoint
      ~DataFrame.mapInArrow
      ~DataFrame.mapInPandas
      ~DataFrame.observe
      ~DataFrame.orderBy
      ~DataFrame.pandas_api
      ~DataFrame.persist
      ~DataFrame.printSchema
      ~DataFrame.randomSplit
      ~DataFrame.registerTempTable
      ~DataFrame.repartition
      ~DataFrame.repartitionByRange
      ~DataFrame.replace
      ~DataFrame.rollup
      ~DataFrame.sameSemantics
      ~DataFrame.sample
      ~DataFrame.sampleBy
      ~DataFrame.select
      ~DataFrame.selectExpr
      ~DataFrame.semanticHash
      ~DataFrame.show
      ~DataFrame.sort
      ~DataFrame.sortWithinPartitions
      ~DataFrame.subtract
      ~DataFrame.summary
      ~DataFrame.tail
      ~DataFrame.take
      ~DataFrame.toDF
      ~DataFrame.toJSON
      ~DataFrame.toLocalIterator
      ~DataFrame.toPandas
      ~DataFrame.to_koalas
      ~DataFrame.to_pandas_on_spark
      ~DataFrame.transform
      ~DataFrame.union
      ~DataFrame.unionAll
      ~DataFrame.unionByName
      ~DataFrame.unpersist
      ~DataFrame.where
      ~DataFrame.withColumn
      ~DataFrame.withColumnRenamed
      ~DataFrame.withColumns
      ~DataFrame.withMetadata
      ~DataFrame.withWatermark
      ~DataFrame.writeTo




   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DataFrame.columns
      ~DataFrame.dtypes
      ~DataFrame.isStreaming
      ~DataFrame.na
      ~DataFrame.rdd
      ~DataFrame.schema
      ~DataFrame.sparkSession
      ~DataFrame.sql_ctx
      ~DataFrame.stat
      ~DataFrame.storageLevel
      ~DataFrame.write
      ~DataFrame.writeStream
   
   